tests/compilefail80.out
[1mtests/compilefail80.pas:7:7: [0m[1m[91merror:[0m Error D.1: Incorrect type for array index
     7 | 	a[3.267] := 9;
	
